[gd_scene load_steps=58 format=3 uid="uid://cy8uooxj2bnmc"]

[ext_resource type="Script" path="res://scripts/obscurite.gd" id="1_n8dm4"]
[ext_resource type="Texture2D" uid="uid://csvhx452yibgs" path="res://assets/sprites/Wizard/Idle.png" id="1_q7u4n"]
[ext_resource type="AudioStream" uid="uid://qagywc8g8rpt" path="res://assets/sounds/FootStep.mp3" id="2_fy3ng"]
[ext_resource type="Texture2D" uid="uid://dcgej6rsv8brd" path="res://assets/sprites/Wizard/Jump.png" id="2_o5oa5"]
[ext_resource type="AudioStream" uid="uid://bb4qnwq5tdcvr" path="res://assets/sounds/Jump.wav" id="3_7pcdo"]
[ext_resource type="Texture2D" uid="uid://b33yqsyjthju3" path="res://assets/sprites/Wizard/Attack_3.png" id="3_iajd6"]
[ext_resource type="AudioStream" uid="uid://bq3i38httoevp" path="res://assets/sounds/MagicLoopMP3.mp3" id="4_8msxb"]
[ext_resource type="Texture2D" uid="uid://clpotjgxjv52w" path="res://assets/sprites/Wizard/Run.png" id="4_ja1co"]
[ext_resource type="Texture2D" uid="uid://ddw5vknpsgw1k" path="res://assets/sprites/lights/ddxt97e-141fe084-2604-4e10-b33a-94202ffb4315.png" id="5_0v7em"]
[ext_resource type="Texture2D" uid="uid://wcip4d0kleir" path="res://assets/sprites/Wizard/Dead.png" id="6_5lxwi"]
[ext_resource type="Texture2D" uid="uid://61jbwbadtoc8" path="res://assets/sprites/lights/128x128 textures (93).png" id="6_aatib"]
[ext_resource type="Texture2D" uid="uid://cq64gtqhgbwer" path="res://assets/sprites/lights/circle-512.png" id="10_sb3g8"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pnkln"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_k81m8"]
blend_mode = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_5dk2y"]
atlas = ExtResource("1_q7u4n")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sojed"]
atlas = ExtResource("1_q7u4n")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax6kc"]
atlas = ExtResource("1_q7u4n")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdfrh"]
atlas = ExtResource("1_q7u4n")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_guxin"]
atlas = ExtResource("1_q7u4n")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy8gm"]
atlas = ExtResource("1_q7u4n")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etx57"]
atlas = ExtResource("2_o5oa5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uenyy"]
atlas = ExtResource("2_o5oa5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7npn"]
atlas = ExtResource("2_o5oa5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pj3x"]
atlas = ExtResource("2_o5oa5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w50nu"]
atlas = ExtResource("2_o5oa5")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7swn"]
atlas = ExtResource("2_o5oa5")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqq3m"]
atlas = ExtResource("2_o5oa5")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q46c0"]
atlas = ExtResource("2_o5oa5")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pm7d"]
atlas = ExtResource("2_o5oa5")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx2o5"]
atlas = ExtResource("2_o5oa5")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_reyqc"]
atlas = ExtResource("2_o5oa5")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap1cp"]
atlas = ExtResource("6_5lxwi")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2efht"]
atlas = ExtResource("6_5lxwi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_olspe"]
atlas = ExtResource("6_5lxwi")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsyt0"]
atlas = ExtResource("3_iajd6")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyrn"]
atlas = ExtResource("3_iajd6")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqd46"]
atlas = ExtResource("3_iajd6")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpows"]
atlas = ExtResource("3_iajd6")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya2f5"]
atlas = ExtResource("3_iajd6")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3luy"]
atlas = ExtResource("3_iajd6")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a37o"]
atlas = ExtResource("3_iajd6")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fct3"]
atlas = ExtResource("4_ja1co")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb5f4"]
atlas = ExtResource("4_ja1co")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o6bk"]
atlas = ExtResource("4_ja1co")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vjc"]
atlas = ExtResource("4_ja1co")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieyuy"]
atlas = ExtResource("4_ja1co")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k25lh"]
atlas = ExtResource("4_ja1co")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl8ox"]
atlas = ExtResource("4_ja1co")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qftg"]
atlas = ExtResource("4_ja1co")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ehvb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dk2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sojed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax6kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdfrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guxin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy8gm")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_etx57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uenyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7npn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pj3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w50nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7swn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqq3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q46c0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pm7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx2o5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reyqc")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap1cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2efht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olspe")
}],
"loop": false,
"name": &"lose",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsyt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqd46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpows")
}],
"loop": false,
"name": &"magic_end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya2f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3luy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a37o")
}],
"loop": true,
"name": &"magic_loop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fct3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb5f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o6bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieyuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k25lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl8ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qftg")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0p4xi"]
height = 42.0

[sub_resource type="Animation" id="Animation_1gxwp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"lose"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6k0ne"]
blend_mode = 2
light_mode = 2

[sub_resource type="Animation" id="Animation_lnaew"]
resource_name = "lose"
length = 2.0
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"lose"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.183333, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.783333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [null, SubResource("CanvasItemMaterial_6k0ne")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8o8uj"]
_data = {
"RESET": SubResource("Animation_1gxwp"),
"lose": SubResource("Animation_lnaew")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pxtig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0g5d5"]

[node name="Obscurite" type="CharacterBody2D" groups=["Characters", "Obscurite"]]
z_index = 20
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_n8dm4")
sfx_O_footsteps = ExtResource("2_fy3ng")
sfx_O_jump = ExtResource("3_7pcdo")
sfx_O_magic_loop = ExtResource("4_8msxb")

[node name="NegativeLumiereFee" type="PointLight2D" parent="."]
visible = false
light_mask = 7
visibility_layer = 7
position = Vector2(2, -44)
scale = Vector2(8.53791, 8.53791)
energy = 5.0
blend_mode = 1
range_item_cull_mask = 8
texture = ExtResource("5_0v7em")
texture_scale = 0.2

[node name="NegativeLumiere" type="PointLight2D" parent="."]
visible = false
light_mask = 7
visibility_layer = 7
position = Vector2(4, -48)
scale = Vector2(7.17276, 7.05769)
color = Color(0.801945, 0, 0.26485, 1)
energy = 2.0
blend_mode = 1
range_item_cull_mask = 6
texture = ExtResource("5_0v7em")
texture_scale = 0.2

[node name="LumierePerso" type="PointLight2D" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_pnkln")
use_parent_material = true
position = Vector2(4, -48)
scale = Vector2(8.8256, 9.07052)
color = Color(1, 0.832862, 0.862788, 1)
range_item_cull_mask = 7
texture = ExtResource("5_0v7em")
texture_scale = 0.15

[node name="Vision" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.370929, 0.581081, 1, 1)
light_mask = 7
material = SubResource("CanvasItemMaterial_k81m8")
position = Vector2(4, -48)
scale = Vector2(21.0985, 21.684)
texture = ExtResource("6_aatib")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -64)
sprite_frames = SubResource("SpriteFrames_ehvb6")
animation = &"lose"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -21)
shape = SubResource("CapsuleShape2D_0p4xi")

[node name="sfx_player" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_8o8uj")
}

[node name="Coyote_Timer" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0, 0, 0.333333)
scale = Vector2(1.41973, 1.41973)
monitoring = false

[node name="ColorRect" type="ColorRect" parent="Range"]
visible = false
offset_left = -256.387
offset_top = -297.24
offset_right = -216.387
offset_bottom = -257.24
scale = Vector2(12.8359, 12.8359)

[node name="SpriteRange" type="Sprite2D" parent="Range"]
light_mask = 2
material = SubResource("CanvasItemMaterial_pxtig")
position = Vector2(2, -42)
scale = Vector2(0.995341, 0.995341)
texture = ExtResource("10_sb3g8")

[node name="CollisionRange" type="CollisionShape2D" parent="Range"]
position = Vector2(2, -42)
scale = Vector2(25.6377, 25.6377)
shape = SubResource("CircleShape2D_0g5d5")

[node name="DetectLightDown" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -30)
target_position = Vector2(0, 54)
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="DetectLightRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -30)
rotation = -1.57079
target_position = Vector2(8.96454e-05, 40)
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="DetectLightUp" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -30)
rotation = -3.14159
target_position = Vector2(0, 54)
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="DetectLightLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(2, -30)
rotation = -4.71238
target_position = Vector2(0.00028038, 42)
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="Coyote_Timer" to="." method="Coyote_timeout"]
[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
